--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "@uploadthing/react": "^6.2.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-redux": "^9.1.0",
+    "uploadthing": "^6.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.54",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
