--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.1.0",
     "@uploadthing/react": "^6.2.2",
+    "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-redux": "^9.1.0",
+    "react-tag-input": "^6.8.1",
     "uploadthing": "^6.3.3",
     "zod": "^3.22.4"
   },
