--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-redux": "^9.1.0",
+    "react-slick": "^0.30.1",
     "react-tag-input": "^6.8.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "uploadthing": "^6.3.3",
     "zod": "^3.22.4"
   },
