--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.3.3",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.9.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@uploadthing/react": "^6.2.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
+    "next-auth": "4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
@@ -32,6 +35,7 @@
     "@types/react": "18.2.54",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.3.0",
     "typescript": "5.3.3"
   }
