--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/node": "20.11.16",
     "@types/react": "18.2.54",
     "autoprefixer": "^10.0.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.9.1",
     "tailwindcss": "^3.3.0",
